--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,8 @@
     "express": "^4.15.4",
     "mysql": "^2.14.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "cors": "^2.8.4"
   }
 }
