--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.1",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
     "mysql": "^2.14.1",
     "path": "^0.12.7"
