--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,22 @@
   "version": "1.0.0",
   "description": "Starting setup for react redux project",
   "main": "index.js",
+  "proxy": {
+    "/puzzles": {
+      "target": "http://localhost:4000"
+    },
+    "/login": {
+      "target": "http://localhost:4000"
+    },
+    "/savepuzzle": {
+      "target": "http://localhost:4000"
+    }
+  },
   "scripts": {
     "start": "node dev_server.js",
     "bundle": "node_modules/.bin/webpack --config webpack.deploy.config.js --progress --colors",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npm run dev --prefix ../server"
   },
   "author": "Scott Bowler",
   "license": "ISC",
