--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "webserver.js",
   "scripts": {
     "start": "node webserver.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon webserver.js",
+    "client": "npm run start --prefix ../client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -18,14 +21,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.1",
+    "concurrently": "^3.5.0",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^1.3.1",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "mysql": "^2.14.1",
+    "nodemon": "^1.12.1",
     "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "cors": "^2.8.4"
   }
 }
