--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
     },
     "/savepuzzle": {
       "target": "http://localhost:4000"
+    },
+    "/puzzleComplete": {
+      "target": "http://localhost:4000"
     }
   },
   "scripts": {
