--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "/puzzles": {
       "target": "http://localhost:4000"
     },
+    "/getRankings": {
+      "target": "http://localhost:4000"
+    },
     "/login": {
       "target": "http://localhost:4000"
     },
