completed pulls from back end

--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,15 @@
     },
     "/puzzleComplete": {
       "target": "http://localhost:4000"
+    },
+    "/getProfile": {
+      "target": "http://localhost:4000"
+    },
+//    "/getSolvedPuzzles": {
+//      "target": "http://localhost:4000"
+//    },
+    "/getCreatedPuzzles": {
+      "target": "http://localhost:4000"
     }
   },
   "scripts": {
