Completed All Puzzle Play and Create Tutorials

--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,9 @@
     "/getProfile": {
       "target": "http://localhost:4000"
     },
-//    "/getSolvedPuzzles": {
-//      "target": "http://localhost:4000"
-//    },
+   "/getSolvedPuzzles": {
+     "target": "http://localhost:4000"
+   },
     "/getCreatedPuzzles": {
       "target": "http://localhost:4000"
     }
