--- a/server/client/package.json
+++ b/server/client/package.json
@@ -22,13 +22,13 @@
     "/getProfile": {
       "target": "http://localhost:4000"
     },
-    "/getSolvedPuzzles": {
-      "target": "http://localhost:4000"
-    },
-    "/getCreatedPuzzles": {
+    "/getUserPuzzles": {
       "target": "http://localhost:4000"
     },
     "/getPuzzleFromId": {
+      "target": "http://localhost:4000"
+    },
+    "/checkLoginStatus": {
       "target": "http://localhost:4000"
     }
   },
