--- a/server/client/package.json
+++ b/server/client/package.json
@@ -30,6 +30,9 @@
     },
     "/checkLoginStatus": {
       "target": "http://localhost:4000"
+    },
+    "/updateProfile": {
+      "target": "http://localhost:4000"
     }
   },
   "scripts": {
