Added XP Point updates on all puzzle completions also resolved getting Profile to reload upon changing profile pictures or changing user

--- a/server/client/package.json
+++ b/server/client/package.json
@@ -34,7 +34,7 @@
     "/checkLoginStatus": {
       "target": "http://localhost:4000"
     },
-    "/updateEXP": {
+    "/updateXP": {
       "target": "http://localhost:4000"
     },
     "/updateProfile": {
