--- a/server/client/package.json
+++ b/server/client/package.json
@@ -71,7 +71,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.5",
-    "eslint": "^4.9.0",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "file-loader": "^0.11.2",
     "image-webpack-loader": "^3.3.1",
     "postcss-loader": "^2.0.6",
