--- a/server/client/.eslintrc.json
+++ b/server/client/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "sourceType": "module"
+    },
+    "env": {
+      "es6": true,
+      "node": true
+    }
 }
